--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,8 @@
         <item>@font/amatica_sc</item>
         <item>@font/annie_use_your_telescope</item>
         <item>@font/bilbo</item>
+        <item>@font/courgette</item>
+        <item>@font/courier_prime_italic</item>
         <item>@font/indie_flower</item>
     </array>
 </resources>
