--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -40,6 +40,7 @@
             app:layout_constraintTop_toBottomOf="@id/pro_btn_day"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -47,7 +48,109 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="310dp"
+        android:layout_marginRight="70dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         >
+        <TextView
+            android:id="@+id/pro_statistic_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/indie_flower"
+            android:text="Statistic:"
+            android:textColor="@color/black"
+            android:textSize="24dp"
+            app:layout_gravity="center_horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/pro_statistic_interest_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="@font/indie_flower"
+            android:text="Interesting days:"
+            android:textColor="@color/black"
+            android:textSize="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_txt"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/pro_statistic_interest_percents_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginLeft="10dp"
+            android:fontFamily="@font/indie_flower"
+            android:text="33%"
+            android:textColor="@color/black"
+            android:textSize="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_txt"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/pro_statistic_productive_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="@font/indie_flower"
+            android:text="Productive days:"
+            android:textColor="@color/black"
+            android:textSize="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_interest_txt"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/pro_statistic_productive_percents_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginLeft="10dp"
+            android:fontFamily="@font/indie_flower"
+            android:text="33%"
+            android:textColor="@color/black"
+            android:textSize="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_interest_txt"
+            app:layout_constraintStart_toEndOf="@id/pro_statistic_productive_txt"/>
+
+        <TextView
+            android:id="@+id/pro_statistic_ordinary_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="@font/indie_flower"
+            android:text="Ordinary days:"
+            android:textColor="@color/black"
+            android:textSize="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_productive_txt"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/pro_statistic_ordinary_percents_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginLeft="10dp"
+            android:fontFamily="@font/indie_flower"
+            android:text="33%"
+            android:textColor="@color/black"
+            android:textSize="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/pro_statistic_productive_txt"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
