--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -19,7 +19,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="70dp"
             android:background="@drawable/rounded_day"
-            android:fontFamily="@font/indie_flower"
+            android:fontFamily="@font/my_written"
+            android:letterSpacing="0.1"
             android:gravity="center_horizontal"
             android:paddingEnd="10dp"
             android:text="11"
@@ -35,7 +36,8 @@
             android:layout_marginTop="30dp"
             android:text="IMPROVE YOUR DAY"
             android:textSize="32dp"
-            android:fontFamily="@font/indie_flower"
+            android:fontFamily="@font/my_written"
+            android:letterSpacing="0.1"
             android:clickable="true"
             app:layout_constraintTop_toBottomOf="@id/pro_btn_day"
             app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +61,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:fontFamily="@font/indie_flower"
+            android:fontFamily="@font/my_written"
+            android:letterSpacing="0.1"
             android:text="Statistic:"
             android:textColor="@color/black"
             android:textSize="24dp"
@@ -74,7 +77,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
-            android:fontFamily="@font/indie_flower"
+            android:fontFamily="@font/my_written"
+            android:letterSpacing="0.1"
             android:text="Interesting days:"
             android:textColor="@color/black"
             android:textSize="24dp"
@@ -88,7 +92,8 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="0dp"
             android:layout_marginLeft="10dp"
-            android:fontFamily="@font/indie_flower"
+            android:fontFamily="@font/my_written"
+            android:letterSpacing="0.1"
             android:text="33%"
             android:textColor="@color/black"
             android:textSize="24dp"
@@ -101,7 +106,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
-            android:fontFamily="@font/indie_flower"
+            android:fontFamily="@font/my_written"
+            android:letterSpacing="0.1"
             android:text="Productive days:"
             android:textColor="@color/black"
             android:textSize="24dp"
@@ -115,7 +121,8 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="0dp"
             android:layout_marginLeft="10dp"
-            android:fontFamily="@font/indie_flower"
+            android:fontFamily="@font/my_written"
+            android:letterSpacing="0.1"
             android:text="33%"
             android:textColor="@color/black"
             android:textSize="24dp"
@@ -128,7 +135,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
-            android:fontFamily="@font/indie_flower"
+            android:fontFamily="@font/my_written"
+            android:letterSpacing="0.1"
             android:text="Ordinary days:"
             android:textColor="@color/black"
             android:textSize="24dp"
@@ -142,7 +150,8 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="0dp"
             android:layout_marginLeft="10dp"
-            android:fontFamily="@font/indie_flower"
+            android:fontFamily="@font/my_written"
+            android:letterSpacing="0.1"
             android:text="33%"
             android:textColor="@color/black"
             android:textSize="24dp"
