--- a/app/src/main/res/layout/custom_invite_list_row.xml
+++ b/app/src/main/res/layout/custom_invite_list_row.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/list_view_style"
     android:paddingBottom="10dp"
@@ -61,60 +61,5 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <TextView
-        android:id="@+id/friend_list_percentages_productive_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="50%"
-        android:textSize = "22dp"
-        android:textColor = "#f0989f"
-        android:layout_gravity = "center_vertical"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="22dp"
-        android:fontFamily="@font/my_written"
-        android:letterSpacing="0.1"
-        android:layout_toRightOf="@id/friend_list_name_layout"/>
 
-    <TextView
-        android:id="@+id/friend_list_percentages_interest_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="25%"
-        android:textSize = "22dp"
-        android:letterSpacing="0.1"
-        android:layout_gravity = "center_vertical"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="22dp"
-        android:fontFamily="@font/my_written"
-        android:textColor="#ffcc00"
-        android:layout_toRightOf="@id/friend_list_percentages_productive_txt"/>
-
-    <TextView
-        android:id="@+id/friend_list_percentages_ordinary_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="25%"
-        android:textSize = "22dp"
-        android:letterSpacing="0.1"
-        android:layout_gravity = "center_vertical"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="22dp"
-        android:fontFamily="@font/my_written"
-        android:textColor="#bbdefb"
-        android:layout_toRightOf="@id/friend_list_percentages_interest_txt" />
-
-    <TextView
-        android:id="@+id/friend_list_last_notion_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/friend_list_name_layout"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/my_written"
-        android:layout_centerHorizontal = "true"
-        android:letterSpacing="0.1"
-        android:text="Хороший день"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        />
 </RelativeLayout>
