--- a/app/src/main/res/layout/custom_invite_list_row.xml
+++ b/app/src/main/res/layout/custom_invite_list_row.xml
@@ -8,12 +8,39 @@
     android:paddingBottom="10dp"
     android:paddingTop="10dp">
 
+    <Button
+        android:id="@+id/invite_accept_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Widget.Material3.Button.IconButton"
+        android:drawableLeft = "@drawable/ic_baseline_check_24"
+        android:textColor="@color/black"
+        android:textAllCaps="false"
+        android:textSize="32dp"
+        android:textStyle="normal"
+        android:fontFamily="@font/my_written"
+        android:layout_marginLeft="50dp"
+        android:layout_toRightOf="@id/invite_list_name_layout"/>
+    <Button
+        android:id="@+id/invite_decline_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Widget.Material3.Button.IconButton"
+        android:drawableLeft = "@drawable/ic_baseline_close_24"
+        android:textColor="@color/black"
+        android:textAllCaps="false"
+        android:textSize="32dp"
+        android:textStyle="normal"
+        android:fontFamily="@font/my_written"
+        android:layout_marginLeft="50dp"
+        android:layout_toRightOf="@id/invite_accept_btn"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id = "@+id/friend_list_name_layout"
+        android:id = "@+id/invite_list_name_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginRight="5dp"
         android:padding = "3dp">
         <TextView
@@ -59,6 +86,7 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 
