--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:id = "@+id/menu_item_current_day"
+        android:icon = "@drawable/ic_date_01"
+        android:gravity="center"
+        android:font="@font/indie_flower"
+        android:orderInCategory="1"/>
     <item
         android:id = "@+id/menu_item_calendar"
         android:icon = "@drawable/ic_calendar"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         android:title="@null" />
-    <item
-        android:id = "@+id/menu_item_current_day"
-        android:title= ""
-        android:gravity="center"
-        android:font="@font/indie_flower"
-        android:orderInCategory="2"/>
     <item
         android:id = "@+id/menu_item_profile"
         android:icon = "@drawable/ic_person"
         android:title="@null"
         android:orderInCategory="3"/>
+    <item
+        android:id = "@+id/menu_item_friends"
+        android:icon = "@drawable/ic_friends"
+        android:title="@null"
+        android:orderInCategory="4"/>
 </menu>
