--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -11,9 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="40dp"
-        android:fontFamily="@font/indie_flower"
+        android:fontFamily="@font/my_written"
+        android:letterSpacing="0.1"
         android:text="Become more productive"
         android:textColor="@color/black"
         android:textSize="32dp"
@@ -23,16 +24,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <EditText
         android:id="@+id/reg_text_email_field"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="60dp"
         android:background="@drawable/input_field"
         android:ems="10"
-        android:fontFamily="@font/indie_flower"
+        android:fontFamily="@font/my_written"
+        android:letterSpacing="0.1"
         android:textColorHint="#686868"
         android:hint="Email"
         android:textSize="20dp"
@@ -45,14 +48,81 @@
         app:layout_constraintTop_toBottomOf="@id/reg_text_greeting" />
 
     <EditText
-        android:id="@+id/reg_text_password_field"
+        android:id="@+id/reg_text_nickname_field"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="60dp"
         android:background="@drawable/input_field"
-        android:fontFamily="@font/indie_flower"
+        android:ems="10"
+        android:fontFamily="@font/my_written"
+        android:letterSpacing="0.1"
+        android:textColorHint="#686868"
+        android:hint="Nickname"
+        android:textSize="20dp"
+        android:gravity="center_vertical|left"
+        android:paddingBottom="4dp"
+        android:paddingLeft="5dp"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/reg_text_email_field" />
+
+    <EditText
+        android:id="@+id/reg_text_name_field"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="60dp"
+        android:background="@drawable/input_field"
+        android:ems="10"
+        android:fontFamily="@font/my_written"
+        android:letterSpacing="0.1"
+        android:textColorHint="#686868"
+        android:hint="Name"
+        android:textSize="20dp"
+        android:gravity="center_vertical|left"
+        android:paddingBottom="4dp"
+        android:paddingLeft="5dp"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/reg_text_nickname_field" />
+
+    <EditText
+        android:id="@+id/reg_text_surname_field"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="60dp"
+        android:background="@drawable/input_field"
+        android:ems="10"
+        android:fontFamily="@font/my_written"
+        android:letterSpacing="0.1"
+        android:textColorHint="#686868"
+        android:hint="Surname"
+        android:textSize="20dp"
+        android:gravity="center_vertical|left"
+        android:paddingBottom="4dp"
+        android:paddingLeft="5dp"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/reg_text_name_field" />
+
+    <EditText
+        android:id="@+id/reg_text_password_field"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="60dp"
+        android:background="@drawable/input_field"
+        android:fontFamily="@font/my_written"
+        android:letterSpacing="0.1"
         android:textColorHint="#686868"
         android:ems="10"
         android:hint="Password"
@@ -63,7 +133,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/reg_text_email_field" />
+        app:layout_constraintTop_toBottomOf="@id/reg_text_surname_field" />
 
     <EditText
         android:id="@+id/reg_text_password_repeat_field"
@@ -73,7 +143,8 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="60dp"
         android:background="@drawable/input_field"
-        android:fontFamily="@font/indie_flower"
+        android:fontFamily="@font/my_written"
+        android:letterSpacing="0.1"
         android:textColorHint="#686868"
         android:ems="10"
         android:hint="Repeat your password"
@@ -91,8 +162,9 @@
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:fontFamily="@font/indie_flower"
+        android:layout_marginTop="60dp"
+        android:fontFamily="@font/my_written"
+        android:letterSpacing="0.1"
         android:text="Registration"
         android:textAllCaps="false"
         android:textColor="@color/black"
