--- a/app/src/main/res/layout/fragment_current_day.xml
+++ b/app/src/main/res/layout/fragment_current_day.xml
@@ -17,7 +17,7 @@
             android:layout_width="140dp"
             android:layout_height="140dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="25dp"
             android:background="@drawable/rounded_day"
             android:fontFamily="@font/indie_flower"
             android:gravity="center_horizontal"
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="70dp"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="220dp"
         android:layout_marginRight="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,6 +127,7 @@
                 android:gravity="center_horizontal|bottom"
                 android:hint="Write little note"
                 android:inputType="textPersonName"
+                android:minHeight="48dp"
                 android:paddingBottom="2dp"
                 android:textSize="24dp"
                 app:layout_constraintStart_toStartOf="parent"
