--- a/app/src/main/res/layout/fragment_current_day.xml
+++ b/app/src/main/res/layout/fragment_current_day.xml
@@ -19,6 +19,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="25dp"
             android:background="@drawable/rounded_day"
+
             android:fontFamily="@font/indie_flower"
             android:gravity="center_horizontal"
             android:paddingEnd="10dp"
@@ -54,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cur_day_constraint_btn">
 
         <Button
-            android:id="@+id/text_button"
+            android:id="@+id/cur_day_save_btn"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
