--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -48,20 +48,19 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ListView
-        android:id = "@+id/friend_list_view"
+        android:id="@+id/friend_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="100dp"
         android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
         android:layout_marginBottom="160dp"
-        tools:listitem="@layout/custom_friend_list_row"
         android:divider="@android:color/transparent"
         android:dividerHeight="8dp"
         android:overScrollMode="never"
         android:scrollbars="none"
-        android:visibility="gone"
-        />
+        android:visibility="visible"
+        tools:listitem="@layout/custom_friend_list_row" />
 
     <ListView
         android:id="@+id/friend_invite_list_view"
@@ -75,8 +74,8 @@
         android:dividerHeight="8dp"
         android:overScrollMode="never"
         android:scrollbars="none"
-        tools:listitem="@layout/custom_invite_list_row"
-        android:visibility="visible" />
+        android:visibility="invisible"
+        tools:listitem="@layout/custom_invite_list_row" />
 
     <Button
         android:id="@+id/friend_friend_list_new_btn"
