--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -12,11 +12,9 @@
         android:layout_width="33dp"
         android:layout_height="33dp"
         android:background="@drawable/rounded_day"
-        android:fontFamily="@font/indie_flower"
+        android:fontFamily="@font/my_written"
         android:text="1"
         android:gravity="center"
-        android:paddingBottom="3dp"
-        android:paddingRight="2dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
