--- a/app/src/main/res/layout/custom_invite_list_row.xml
+++ b/app/src/main/res/layout/custom_invite_list_row.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/list_view_style"
     android:paddingBottom="10dp"
     android:paddingTop="10dp">
@@ -15,17 +14,17 @@
 
     <ImageButton
         android:id="@+id/invite_accept_btn"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="50dp"
+        android:layout_toRightOf="@id/invite_list_name_layout"
+        android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
-        android:layout_centerVertical="true"
-        android:background="?attr/selectableItemBackground"
-        android:src = "@drawable/ic_baseline_check_24"
-        android:layout_marginLeft="50dp"
-        android:layout_toRightOf="@id/invite_list_name_layout"/>
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:src="@drawable/ic_baseline_check_24" />
     <ImageButton
         android:id="@+id/invite_decline_btn"
         android:paddingTop="10dp"
