--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -7,7 +7,8 @@
     tools:context=".FragmentCalendar">
 
 
-    <GridLayout
+
+    <androidx.gridlayout.widget.GridLayout
         android:id = "@+id/calendar_days_holder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,12 +16,10 @@
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
         android:layout_marginBottom="200dp"
-        android:rowCount = "5"
-        android:columnCount = "7" >
+        app:rowCount = "5"
+        app:columnCount="7">
 
-
-
-    </GridLayout>
+    </androidx.gridlayout.widget.GridLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cur_day_constraint_btn"
@@ -45,18 +44,6 @@
             app:layout_constraintStart_toStartOf="parent"
             android:textSize="100dp" />
 
-        <TextView
-            android:id="@+id/cur_day_answer_txt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:text="KEEP IT UP"
-            android:textSize="32dp"
-            android:textColor="@color/black"
-            android:fontFamily="@font/indie_flower"
-            app:layout_constraintTop_toBottomOf="@id/calendar_btn_day"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
 
 
@@ -64,6 +51,95 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    
+    <Button
+        android:id="@+id/cal_btn_prev_year"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2021"
+        android:textColor="#787878"
+        android:textAllCaps="false"
+        android:textSize="24dp"
+        android:textStyle="normal"
+        android:fontFamily="@font/my_written"
+        android:layout_marginBottom="100dp"
+        android:layout_marginStart="40dp"
+        android:layout_gravity="center|left"
+        />
+    <Button
+        android:id="@+id/cal_btn_cur_year"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2022"
+        android:textColor="@color/black"
+        android:textAllCaps="false"
+        android:textSize="24dp"
+        android:textStyle="normal"
+        android:fontFamily="@font/my_written"
+        android:layout_marginBottom="100dp"
+        android:layout_gravity="center|center"
+        />
+    <Button
+        android:id="@+id/cal_btn_next_year"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2023"
+        android:textColor="#787878"
+        android:textAllCaps="false"
+        android:textSize="24dp"
+        android:textStyle="normal"
+        android:fontFamily="@font/my_written"
+        android:layout_marginBottom="100dp"
+        android:layout_marginEnd="40dp"
+        android:layout_gravity="center|right"
+        />
+
+    <Button
+        android:id="@+id/cal_btn_prev_mth"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Previous"
+        android:textColor="#787878"
+        android:textAllCaps="false"
+        android:textSize="24dp"
+        android:textStyle="normal"
+        android:fontFamily="@font/my_written"
+        android:layout_marginBottom="130dp"
+        android:layout_marginStart="40dp"
+        android:layout_gravity="bottom|left"
+        />
+    <Button
+        android:id="@+id/cal_btn_cur_mth"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Current"
+        android:textColor="@color/black"
+        android:textAllCaps="false"
+        android:textSize="24dp"
+        android:textStyle="normal"
+        android:fontFamily="@font/my_written"
+        android:layout_marginBottom="130dp"
+        android:layout_gravity="bottom|center"
+        />
+    <Button
+        android:id="@+id/cal_btn_next_mth"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next"
+        android:textColor="#787878"
+        android:textAllCaps="false"
+        android:textSize="24dp"
+        android:textStyle="normal"
+        android:fontFamily="@font/my_written"
+        android:layout_marginBottom="130dp"
+        android:layout_marginEnd="40dp"
+        android:layout_gravity="bottom|right"
+        />
+
 
 </FrameLayout>
