--- a/app/src/main/res/drawable/input_field.xml
+++ b/app/src/main/res/drawable/input_field.xml
@@ -11,9 +11,9 @@
         android:right="10dp"
         android:bottom="4dp" />
     <solid
-        android:color="#f5f5f5"
+        android:color="@color/white"
             />
     <stroke
-        android:width="1.2dp"
+        android:width="0.7dp"
         android:color="@color/black" />
     </shape>
